syntax = "proto3";

service GroupService {
  rpc GetGroup(GroupRequest) returns (GroupResponse);
  rpc GetAllGroups(Empty) returns (AllGroupsResponse);
}

message GroupResponse {
  int32 id = 1;
  repeated int32 students = 2;
};

message GroupRequest {
  int32 id = 1;
};

message AllGroupsResponse {
  repeated GroupResponse groups = 1;
};

message Empty {};